...
                            <constraint firstItem="3Ei-kr-xY7" firstAttribute="trailing" secondItem="If7-CM-4ys" secondAttribute="trailing" id="WPl-B7-myi"/>
                            <constraint firstItem="3Ei-kr-xY7" firstAttribute="bottom" secondItem="If7-CM-4ys" secondAttribute="bottom" id="aQl-sx-6Qo"/>
                            <constraint firstItem="If7-CM-4ys" firstAttribute="top" secondItem="3Ei-kr-xY7" secondAttribute="top" id="oL6-AF-tzn"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="3Ei-kr-xY7"/>
                    </view>
                    <navigationItem key="navigationItem" title="Task List View" id="Q5t-jQ-CwC">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="F6c-Xd-HjF">
                            <connections>
                                <action selector="additem:" destination="eJB-QW-yPv" id="nCd-2B-6pY"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="68" translatesAutoresizingMaskIntoConstraints="NO" id="r3Y-lc-XqX">
                                <rect key="frame" x="16" y="16" width="288" height="34"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hcq-Pu-kO0">
                                        <rect key="frame" x="0.0" y="0.0" width="288" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="71" translatesAutoresizingMaskIntoConstraints="NO" id="OEP-HL-dCf">
                                <rect key="frame" x="16" y="66" width="288" height="34"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vM8-IY-6fQ">
                                        <rect key="frame" x="0.0" y="0.0" width="288" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="sro-Kq-dJu">
                                <rect key="frame" x="16" y="116" width="288" height="34"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BQj-1v-tMm">
                                        <rect key="frame" x="0.0" y="0.0" width="288" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="44" translatesAutoresizingMaskIntoConstraints="NO" id="YQI-Rc-DFN">
                                <rect key="frame" x="16" y="166" width="288" height="34"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KBM-NX-rwB">
                                        <rect key="frame" x="0.0" y="0.0" width="288" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="alc-oR-OvU">
                                <rect key="frame" x="16" y="216" width="288" height="34"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B8U-As-cvu">
                                        <rect key="frame" x="0.0" y="0.0" width="288" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RqY-oB-udC">
                                        <rect key="frame" x="152" y="0.0" width="136" height="48"/>
                                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Save"/>
                                        <connections>
                                            <action selector="save" destination="Qf3-jm-lmf" eventType="touchUpInside" id="ABg-9s-EPy"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
